[package]
name = "ncco_validator"
version = "0.1.0"
authors = ["Simon Bihel <simon.bihel@vonage.com>"]
edition = "2018"
description = "JSON validator for NCCOs https://developer.nexmo.com/voice/voice-api/ncco-reference"
repository = "https://github.com/sbihel/ncco_validator_worker"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

futures = "0.3"
js-sys = "0.3"

serde_json = "1"
uuid = { version = "0.8", features = ["wasm-bindgen"] } # for valico
valico = "3"

[dependencies.web-sys]
version = "0.3"
features = ["Request", "Response", "ResponseInit"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
